<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_idpersona"
        android:text="@string/id"
        android:textColor="#ab5634"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:paddingBottom="3dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_nombre"
        android:text="@string/nombre"
        android:textColor="#ab5634"
        android:textStyle="italic"
        android:paddingBottom="3dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_apellidos"
        android:text="@string/apellidos"
        android:textColor="#ab5634"
        android:textStyle="italic"
        android:paddingBottom="3dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_actividad"
        android:text="@string/actividad"
        android:textColor="#ab5634"
        android:textStyle="italic"
        android:paddingBottom="3dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_nivel"
        android:text="@string/nivel"
        android:textColor="#ab5634"
        android:textStyle="italic"
        android:paddingBottom="3dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_modulo"
        android:text="@string/modulo"
        android:textColor="#ab5634"
        android:textStyle="italic"
        android:paddingBottom="3dp"
        />
</LinearLayout>